build.gradle: specify a few JVM options